--- a/Pages/Index.razor
+++ b/Pages/Index.razor
@@ -2,8 +2,10 @@
 
 <PageTitle>Home - Visual Algorithms</PageTitle>
 
-<h1>Hello, world!</h1>
+<h1>Visual Algorithms</h1>
+
+<p>Seeing an execution of any algorithm in visual form allows students to better understand the advantages and disadvantages in the context of use.</p>
 
 <p>The prupose of this open-source is let user to see simple algoriths execution like Sorting Algorithms, and the Knight's tour problem. </p>
 
-<p>You can help adding new algorithms to this platform.</p>
+<p>Your help is welcome. You can add new algorithms or improve the visualization approach.</p>
