--- a/Pages/Credits.razor
+++ b/Pages/Credits.razor
@@ -2,10 +2,10 @@
 
 <PageTitle>Credits</PageTitle>
 
-<h1>Credits</h1>
+<h1>Open-Source</h1>
 
-<p>This is an open-source code. 
-This software is available at Github. Please you can collaborate with this project to visualize algoritms.</p>
+<p>This is an open-source code. You can find the code at <a href="https://github.com/abastias/VisualAlgorithms" target="_blank">GitHub</a>.
+If you like it, your help is appreciate.</p>
 
 <br>
 
@@ -20,7 +20,12 @@ This software is available at Github. Please you can collaborate with this proje
 <h2>Collaborators</h2>
 
 <ul>
-    <li>Alfonso Bastias: The Knight's Tour  </li> 
+    <li><a href="https://github.com/abastias" target="_blank">Alfonso Bastias</a>
+        <ul><li>The Knight's Tour</li>
+            <li>Sort - Bubble Sort</li>
+            <li>Sort - Selection Sort</li>
+            </ul>
+        </li> 
 
 </ul>
 
