--- a/Pages/Index.razor
+++ b/Pages/Index.razor
@@ -4,8 +4,36 @@
 
 <h1>Visual Algorithms</h1>
 
-<p>Seeing an execution of any algorithm in visual form allows students to better understand the advantages and disadvantages in the context of use.</p>
+<p>Seeing an execution of any algorithm in visual form allows students to better understand the advantages and
+    disadvantages in the context of use.</p>
 
-<p>The prupose of this open-source is let user to see simple algoriths execution like Sorting Algorithms, and the Knight's tour problem. </p>
+<p>The prupose of this open-source project is let user to see simple algoriths execution like Sorting Algorithms, and
+    the Knight's tour problem. </p>
 
 <p>Your help is welcome. You can add new algorithms or improve the visualization approach.</p>
+
+<div class="container-sm">
+    <div class="row">
+        <div class="col-4 text-center">
+            <a href="KnightsTour">
+                <span>
+                    <span class="iconify" data-icon="akar-icons:chess" style="font-size:20px;"></span>&nbsp;&nbsp;
+                    Knight's Tour<br>
+                    <img src="/images/knightTourAnimation.gif" alt="The Knight's Tour" height="220px">
+                </span>
+            </a>
+
+        </div>
+        <div class="col-4 text-center">
+            <a href="Sort">
+                Sort Algorithms
+                <img src="/images/Sort.png" height="200px">
+            </a>
+        </div>
+
+
+    </div>
+
+
+</div>
+
