--- a/Pages/KnightsTour.razor
+++ b/Pages/KnightsTour.razor
@@ -44,7 +44,8 @@
     <b>Current Knight Step:</b> @CurrentKnightStep.ToString("#,##")<br>
 
 
-
+ <div class="row">
+    <div class="col-6">
     <table class="text-center">
         @for (int i = 0; i < SizeN; i++)
         {
@@ -69,6 +70,14 @@
             </tr>
         }
     </table>
+    </div>
+      <div class="col-6">
+        <code>
+//Placehorder for code          
+        </code>
+
+      </div>
+    </div>
 </div>
 
 <style>
