--- a/Pages/_Layout.cshtml
+++ b/Pages/_Layout.cshtml
@@ -11,6 +11,8 @@
     <link rel="stylesheet" href="css/bootstrap/bootstrap.min.css" />
     <link href="css/site.css" rel="stylesheet" />
     <link href="VisualAlgorithms.styles.css" rel="stylesheet" />
+    <link rel="icon" href="favicon.ico" type="image/x-icon"/>
+
     <component type="typeof(HeadOutlet)" render-mode="ServerPrerendered" />
 </head>
 <body>
