--- a/Shared/NavMenu.razor
+++ b/Shared/NavMenu.razor
@@ -1,6 +1,6 @@
 ﻿<div class="top-row ps-3 navbar navbar-dark">
     <div class="container-fluid">
-        <a class="navbar-brand" href="">VisualAlgorithms</a>
+        <a class="navbar-brand" href="">Visual Algorithms</a>
         <button title="Navigation menu" class="navbar-toggler" @onclick="ToggleNavMenu">
             <span class="navbar-toggler-icon"></span>
         </button>
@@ -14,9 +14,11 @@
                 <span class="oi oi-home" aria-hidden="true"></span> Home
             </NavLink>
         </div>
+
+        <div class="separator"></div>
         <div class="nav-item px-3">
             <NavLink class="nav-link" href="KnightsTour">
-                <span class="iconify" data-icon="akar-icons:chess" style="font-size:20px;"></span>&nbsp;&nbsp; Knight's Tour
+                <span class="iconify" data-icon="akar-icons:chess" style="font-size:20px;"></span>&nbsp Knight's Tour
             </NavLink>
         </div>
 
@@ -25,10 +27,10 @@
                 <span class="oi oi-sort-ascending" aria-hidden="true"></span> Sort
             </NavLink>
         </div>
-
+   <div class="separator"></div>
                 <div class="nav-item px-3">
             <NavLink class="nav-link" href="Credits">
-               ©&nbsp; Credits
+               ©&nbsp;&nbsp;&nbsp;Credits
             </NavLink>
         </div>
     </nav>
