--- a/Pages/Index.razor
+++ b/Pages/Index.razor
@@ -7,13 +7,23 @@
 <p>Seeing an execution of any algorithm in visual form allows students to better understand the advantages and
     disadvantages in the context of use.</p>
 
-<p>The prupose of this open-source project is let user to see simple algoriths execution like Sorting Algorithms, and
+<p>The prupose of this open-source project is let user to see simple algoriths execution like Sorting Algorithms,The PI Calculis (usin Montecarlo simulation approach) and
     the Knight's tour problem. </p>
 
 <p>Your help is welcome. You can add new algorithms or improve the visualization approach.</p>
 
 <div class="container-sm">
     <div class="row">
+         <div class="col-4 text-center">
+            <a href="Pi">
+                <span>
+                    <span class="iconify" data-icon="fluent:pi-20-filled" style="font-size:20px;"></span>&nbsp;&nbsp;
+                    Pi Calc<br>
+                    <img src="/images/Pi_Montecarlo.png" alt="PI Calc" height="220px">
+                </span>
+            </a>
+
+        </div>
         <div class="col-4 text-center">
             <a href="KnightsTour">
                 <span>
