--- a/Shared/NavMenu.razor
+++ b/Shared/NavMenu.razor
@@ -16,6 +16,13 @@
         </div>
 
         <div class="separator"></div>
+
+                <div class="nav-item px-3">
+            <NavLink class="nav-link" href="Pi">
+                <span class="iconify" data-icon="fluent:pi-20-filled" style="font-size:20px;"></span>&nbsp Pi
+            </NavLink>
+        </div>
+
         <div class="nav-item px-3">
             <NavLink class="nav-link" href="KnightsTour">
                 <span class="iconify" data-icon="akar-icons:chess" style="font-size:20px;"></span>&nbsp Knight's Tour
