Pi Calc improve Visual

--- a/Pages/Credits.razor
+++ b/Pages/Credits.razor
@@ -21,7 +21,9 @@ If you like it, your help is appreciate.</p>
 
 <ul>
     <li><a href="https://github.com/abastias" target="_blank">Alfonso Bastias</a>
-        <ul><li>The Knight's Tour</li>
+        <ul>
+            <li>Pi Calculation - Montercarlo</li>
+            <li>The Knight's Tour</li>
             <li>Sort - Bubble Sort</li>
             <li>Sort - Selection Sort</li>
             </ul>
