--- a/Pages/Index.razor
+++ b/Pages/Index.razor
@@ -7,10 +7,7 @@
 <p>Seeing an execution of any algorithm in visual form allows students to better understand the advantages and
     disadvantages in the context of use.</p>
 
-<p>The prupose of this open-source project is let user to see simple algoriths execution like Sorting Algorithms,The PI Calculis (usin Montecarlo simulation approach) and
-    the Knight's tour problem. </p>
-
-<p>Your help is welcome. You can add new algorithms or improve the visualization approach.</p>
+<p>The prupose of this open-source project is let user to see simple algoriths execution. Your help is welcome. You can improve or add new algorithms to the system.</p>
 
 <div class="container-sm">
     <div class="row">
