--- a/Pages/KnightsTour.razor
+++ b/Pages/KnightsTour.razor
@@ -80,6 +80,19 @@
     </div>
 </div>
 
+
+ <div class="alert alert-success">
+        <h2>The Knight's Tour Problem</h2>
+        <p>A knight's tour is a sequence of moves of a knight on a chessboard such that the knight visits every square exactly once. 
+            The knight's tour problem is the mathematical problem of finding a knight's tour. Creating a program to find a knight's 
+            tour is a common problem given to computer science students. Variations of the knight's tour problem involve chessboards 
+            of different sizes than the usual 8 × 8, as well as irregular (non-rectangular) boards.</p>
+
+            <img src="/images/knightTourAnimation.gif" alt="The Knight's Tour" height="220px">
+            <br><br>
+
+            <p>Visit Wikipedia for <a href="https://en.wikipedia.org/wiki/Knight%27s_tour" target="_blank">more info</a>.</p>
+     </div>
 <style>
     table tr td {
         width: 30px;
