--- a/Pages/Pi_Calc.razor
+++ b/Pages/Pi_Calc.razor
@@ -5,7 +5,7 @@
 <div class="alert alert-success">
     <h3>Configuration</h3>
 
- <button @onclick="Pi_MonteCarloRun">Start Pi Montecarlo Calc</button>
+ <button @onclick="Pi_MonteCarloRun">Star/Continue Pi Calc</button>
  <button @onclick="Reset">Reset</button>
 
 
@@ -50,7 +50,7 @@
   
  <div class="row">
    <div>
-<b>Total Iteration:</b> @AcumIteration.ToString("#,##") - <b>Inside: </b> @Inside.ToString("#,##")  - <b>Outside:</b> @Outside.ToString("#,##")  - <b>Pi Calc: @PiCalcAcum.ToString("#.##########")  </b> - <b>Error: </b> @PiErrorAcum% <br><br>
+<b>Total Iteration:</b> @AcumIteration.ToString("#,##") - <b>Inside: </b> @Inside.ToString("#,##")  - <b>Outside:</b> @Outside.ToString("#,##")  - <b>Pi Calc: @PiCalcAcum.ToString("n7") </b> - <b>Error: </b> @PiErrorAcum.ToString("n5")% <br><br>
 </div>
       <div class="col-6">
        <div class="container" style="padding:0;margin:0;width:400px" >
@@ -100,10 +100,10 @@
                 <tr>
                     <td>@item.Inside.ToString("#,##")</td>
                     <td>@item.Outside.ToString("#,##")</td>
-                    <td>@item.PiCalc.ToString("#,##")</td>
-                    <td>@item.PiError.ToString("0.000")</td>
-                    <td>@item.PiCalcAcum</td>
-                    <td>@item.PiErrorAcum.ToString("0.000")</td>
+                    <td>@item.PiCalc.ToString("n7")</td>
+                    <td>@item.PiError.ToString("n5")</td>
+                    <td>@item.PiCalcAcum.ToString("n7")</td>
+                    <td>@item.PiErrorAcum.ToString("n5")</td>
                 </tr>
             }
             </tbody>
