--- a/Pages/Index.razor
+++ b/Pages/Index.razor
@@ -12,6 +12,17 @@
 <div class="container-sm">
     <div class="row">
          <div class="col-4 text-center">
+            <a href="PathFinder">
+                <span>
+                    <span class="iconify" data-icon="ph:path-bold" style="font-size:20px;"></span>&nbsp;&nbsp;
+                    PathFinder<br>
+                    <img src="/images/Pathfinder.png" alt="Pathfinder" height="170px">
+                </span>
+            </a>
+
+        </div>
+        
+         <div class="col-4 text-center">
             <a href="Pi">
                 <span>
                     <span class="iconify" data-icon="fluent:pi-20-filled" style="font-size:20px;"></span>&nbsp;&nbsp;
