--- a/Shared/NavMenu.razor
+++ b/Shared/NavMenu.razor
@@ -23,6 +23,12 @@
             </NavLink>
         </div>
 
+                <div class="nav-item px-3">
+            <NavLink class="nav-link" href="PathFinder">
+                <span class="iconify" data-icon="ph:path-bold"></span>&nbsp PathFinder
+            </NavLink>
+        </div>
+
         <div class="nav-item px-3">
             <NavLink class="nav-link" href="KnightsTour">
                 <span class="iconify" data-icon="akar-icons:chess" style="font-size:20px;"></span>&nbsp Knight's Tour
