--- a/Pages/Credits.razor
+++ b/Pages/Credits.razor
@@ -26,6 +26,8 @@ If you like it, your help is appreciate.</p>
             <li>The Knight's Tour</li>
             <li>Sort - Bubble Sort</li>
             <li>Sort - Selection Sort</li>
+            <li>Sudoku - BackTracking</li>
+ 
             </ul>
         </li> 
 
