--- a/Pages/Index.razor
+++ b/Pages/Index.razor
@@ -27,7 +27,7 @@
                 <span>
                     <span class="iconify" data-icon="fluent:pi-20-filled" style="font-size:20px;"></span>&nbsp;&nbsp;
                     Pi Calc<br>
-                    <img src="/images/Pi_Montecarlo.png" alt="PI Calc" height="220px">
+                    <img src="/images/Pi_Montecarlo.png" alt="PI Calc" height="200px">
                 </span>
             </a>
 
@@ -44,8 +44,15 @@
         </div>
         <div class="col-4 text-center">
             <a href="Sort">
-                Sort Algorithms
+                Sort Algorithms<br>
                 <img src="/images/Sort.png" height="200px">
+            </a>
+        </div>
+
+            <div class="col-4 text-center">
+            <a href="Sudoku">
+                Sort Algorithms<br>
+                <img src="/images/Sudoku.png" height="200px">
             </a>
         </div>
 
