--- a/Shared/NavMenu.razor
+++ b/Shared/NavMenu.razor
@@ -40,6 +40,12 @@
                 <span class="oi oi-sort-ascending" aria-hidden="true"></span> Sort
             </NavLink>
         </div>
+
+                       <div class="nav-item px-3">
+            <NavLink class="nav-link" href="Sudoku">
+                <span class="iconify"  data-icon="arcticons:sudoku" style="font-size:30px;"></span> Sudoku
+            </NavLink>
+        </div>
    <div class="separator"></div>
                 <div class="nav-item px-3">
             <NavLink class="nav-link" href="Credits">
